Make menu dynamic + route transitions.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,22 @@
+/*
+    styles.css
+
+    Created by Kalila L. on 2 Jul 2020.
+    Copyright 2020 Vircadia and contributors.
+
+    Distributed under the Apache License, Version 2.0.
+    See the accompanying file LICENSE or http://www.apache.org/licenses/LICENSE-2.0.html
+*/
+
+/* Transitions */
+
+.fade-enter-active, .fade-leave-active {
+	transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+	opacity: 0;
+}
+
 #app {
     font-family: Avenir, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
